--- a/theme/styles/layout.styl
+++ b/theme/styles/layout.styl
@@ -64,3 +64,64 @@ hr {
   margin: 20px 0;
   height: 2px;
 }
+
+
+// 页面加载出来动画
+@keyframes closeSlide 
+ 0%
+    width 300px
+ 100%
+    width 0px
+
+
+// 内容宽度
+.container {
+  position: relative;
+  min-height: 100%;
+  transition: padding 0.3s ease-in	
+}
+.header-inner {
+  margin: 0 auto;
+  width: 700px;
+}
+@media (min-width: 1600px) {
+  .container .header-inner {
+    width: 900px;
+  }
+}
+.main {
+  padding-bottom: 150px;
+}
+.main-inner {
+  margin: 80px auto 0;
+  width: 700px;
+}
+@media (min-width: 1600px) {
+  .container .main-inner {
+    width: 900px;
+  }
+}
+
+
+
+#slide {
+	position: fixed;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	transition: width 0.3s ease-in;
+	flex-grow: 0;
+	width: 0px;
+	background: #d39393;
+}
+.slideOpened {
+	width: 300px !important;
+}
+.slideOpenedContainer {
+	padding-right: 300px;
+}
+.toggleButton {
+	position: fixed;
+	right: 10px;
+	bottom: 20%;
+}
