--- a/theme/styles/theHeader.styl
+++ b/theme/styles/theHeader.styl
@@ -63,7 +63,7 @@
 .header-nav
     float: right
     margin-top 8px
-    overflow hidden
+    // overflow hidden
     .theNav 
         position relative
         opacity 0
@@ -96,3 +96,9 @@
 
 
 
+// 搜索框
+.theNav
+    .search-box
+        margin: 0
+        input
+            width: 5rem
