--- a/theme/styles/footer.styl
+++ b/theme/styles/footer.styl
@@ -1,7 +1,8 @@
+@require "./palette.styl"
 .footer
     margin-top: 30px;
     padding: 10px 0;
-    background: #f5f5f5;
+    background: $themeColor
     color: #666;
 .footer-inner {
   width: 700px;
