--- a/theme/styles/layout.styl
+++ b/theme/styles/layout.styl
@@ -102,20 +102,17 @@ hr {
 
 
 
-#slide {
+.sideBar {
 	position: fixed;
 	right: 0;
 	top: 0;
 	bottom: 0;
-	transition: width 0.3s ease-in;
 	flex-grow: 0;
-	width: 0px;
-	background: #d39393;
 }
-.slideOpened {
-	width: 300px !important;
+.sideOpened {
+	width: 320px !important;
 }
-.slideOpenedContainer {
+.sideOpenedContainer {
 	padding-right: 300px;
 }
 .toggleButton {
