--- a/theme/styles/sideBar.styl
+++ b/theme/styles/sideBar.styl
@@ -1,5 +1,6 @@
 .sideBar
-    width: 320px
+    height 100%
+    width: 300px
     box-shadow: inset 0 2px 6px #000;
     background: #222;
     .sideBar-inner
