完善侧栏功能

--- a/theme/styles/footer.styl
+++ b/theme/styles/footer.styl
@@ -1,5 +1,8 @@
 @require "./palette.styl"
 .footer
+    position: absolute
+    bottom: 0
+    width: 100%
     margin-top: 30px;
     padding: 10px 0;
     background: $themeColor
