--- a/theme/styles/layout.styl
+++ b/theme/styles/layout.styl
@@ -7,11 +7,11 @@
 
 html {
   font-family: sans-serif; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  height: 100%
 }
 body {
   margin: 0;
+  height: 100%
   position: relative;
     font-family: 'Lato', "PingFang SC", "Microsoft YaHei", sans-serif;
     font-size: 15px;
@@ -19,6 +19,8 @@ body {
     color: #555;
     background: #fff;
 }
+#app
+    height: 100%
 article,
 aside,
 details,
@@ -74,7 +76,7 @@ hr {
 // 内容宽度
 .container {
   position: relative;
-  min-height: 100%;
+  height: 100%;
   transition: padding 0.3s ease-in	
 }
 .header-inner {
@@ -87,9 +89,13 @@ hr {
     width: 900px;
   }
 }
+.main
+    min-height: 100%;
+    position: relative
 .main-inner {
   opacity :0
   margin: 80px auto 0;
+  padding-bottom: 100px
   width: 700px;
   animation: shaowMain 1s forwards
   animation-delay: 1s
