--- a/theme/styles/sideBar.styl
+++ b/theme/styles/sideBar.styl
@@ -3,17 +3,16 @@
     width: 300px
     box-shadow: inset 0 2px 6px #000;
     background: #222;
+    .picture
+       display: block
+       width: 40%;
+       margin: 10px auto
     .sideBar-inner
         padding: 20px 10px;
         color: #999;
         text-align: center;
     
-.info-box
-    div 
-        width: 100px
-        height: 100px
-        background: red
-        margin: 20px auto
+    
 
 .nav-box
     margin: 20px auto
@@ -37,3 +36,13 @@
 
     .side-nav-item:hover
         color: #eee;
+
+.social-box
+    ul
+        list-style none
+        display flex
+        padding: 0
+        justify-content center
+    li
+        display: block
+        margin: 5px
